...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your Name"
                android:textSize="13sp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/signupName"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Your Name"
                android:textSize="15sp"
                android:padding="8dp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your Email"
                android:textSize="13sp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/signupEmail"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="youremail@mail.com"
                android:textSize="15sp"
                android:padding="8dp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textSize="13sp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/signupUsername"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Username"
                android:textSize="15sp"
                android:padding="8dp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textSize="13sp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/signupPassword"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="15sp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirm Password"
                android:textSize="13sp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/signupConfirmPassword"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:padding="8dp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/signupButton"

                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="SIGN UP"
                android:textSize="20sp"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/loginRedirectText"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? Log in"
                android:layout_gravity="center"
                android:padding="8dp"
...
