...
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"

                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:text="LOG IN"
                android:textSize="20sp"
...
